--- a/index.html
+++ b/index.html
@@ -1,85 +1,16 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link href='https://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <title>Hull.js by Andrii Heonia</title>
-    <script src="./javascripts/hull.js"></script>
-    <script src="./javascripts/dataGeo.js"></script>
-    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
-    <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
-  </head>
+<!doctype html>
 
-  <body>
-    <header>
-      <div class="inner">
-        <h1>Hull.js examples</h1>
-        <h2></h2>
-        <a href="https://github.com/AndriiHeonia/hull" class="button"><small>View project on</small> GitHub</a>
-      </div>
-    </header>
+<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.6/leaflet.css">
+<style>.map { width: 640px; height: 480px; }</style>
 
-    <div id="content-wrapper">
-      <div class="inner clearfix">
-        <section id="main-content">
+<div id="map" class="map"></div>
 
+<script src="http://cdn.leafletjs.com/leaflet-0.6/leaflet.js"></script>
 
-
-
-<!-- Example 4 -->
-<h3><a name="ex4" class="anchor" href="#ex4"><span class="octicon octicon-link"></span>Geo points</a></h3>
-<p>If your point format differs from the [x, y] then you can provide a custom format pattern:</p>
-<pre><code>var pointset = [
-    { lng: -0.2067, lat: 51.4911 },
-    { lng: -0.2070, lat: 51.4915 },
-    { lng: -0.2074, lat: 51.4912 },
-    ...
-];
-
-var pts = hull(pointset, 0.0011, ['.lng', '.lat']);
-// ... show pts on map</code></pre>
-<p>
-  <div id="map" style="width: 600px; height: 400px"></div>
-  <script>
-  function example4() {
-    var map = L.map('map').setView([51.4894, -0.209], 15);
-    pointset = dataGeo;
-    L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
-        maxZoom: 18,
-        attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors'
-    }).addTo(map);
-    pointset.forEach(function(latlng) {
-        L.circleMarker(latlng, {radius: 2}).addTo(map);
-    });
-    var pts = hull(pointset, 0.0011, ['.lng', '.lat']);
-    L.polygon(pts, {weight: 2}).addTo(map);
-  }
-  </script>
-</p>
-<!-- END: Example 4 -->
-
-
-
-        </section>
-      </div>
-    </div>
-    <footer>
-      <div class="inner">
-        &copy; 2014-2020 <a href="https://www.linkedin.com/in/andriiheonia" target="_blank">Andrii Heonia</a>
-      </div>
-    </footer>
-    <script>
-    window.onload = function() {
-        example1();
-    }
-    </script>
-  </body>
-</html>
+<script>
+new L.Map("map", {
+	zoom: 16,
+	center: new L.LatLng(51.5, 0),
+	layers: [ L.tileLayer("http://{s}.tile.stamen.com/toner/{z}/{x}/{y}.png") ],
+});
+</script>
