--- a/index.html
+++ b/index.html
@@ -24,9 +24,8 @@
 <body>
     <header>
       <div class="inner">
-        <h1>Hull.js examples</h1>
+        <h1>Test</h1>
         <h2></h2>
-        <a href="https://github.com/AndriiHeonia/hull" class="button"><small>View project on</small> GitHub</a>
       </div>
     </header>
 
@@ -71,7 +70,6 @@ var pts = hull(pointset, 0.0011, ['.lng', '.lat']);
     </div>
     <footer>
       <div class="inner">
-        &copy; 2014-2020 <a href="https://www.linkedin.com/in/andriiheonia" target="_blank">Andrii Heonia</a>
       </div>
     </footer>
     <script>
