--- a/index.html
+++ b/index.html
@@ -49,12 +49,20 @@ var pts = hull(pointset, 0.0011, ['.lng', '.lat']);
   <div id="map" style="width: 600px; height: 400px"></div>
   <script>
   function example4() {
+
+	  
     var map = L.map('map').setView([51.4894, -0.209], 15);
+L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw', {
+		maxZoom: 18,
+		attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors, ' +
+			'Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
+		id: 'mapbox/streets-v11',
+		tileSize: 512,
+		zoomOffset: -1
+	}).addTo(map);
+
     pointset = dataGeo;
-    L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
-        maxZoom: 18,
-        attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors'
-    }).addTo(map);
+  
     pointset.forEach(function(latlng) {
         L.circleMarker(latlng, {radius: 2}).addTo(map);
     });
