--- a/index.html
+++ b/index.html
@@ -46,20 +46,15 @@
 var pts = hull(pointset, 0.0011, ['.lng', '.lat']);
 // ... show pts on map</code></pre>
 <p>
-  <div id="map" style="width: 600px; height: 400px"></div>
+  <div id="map" style="width: 900px; height: 600px"></div>
   <script>
   function example1() {
-
-	  
     var map = L.map('map').setView([51.4894, -0.209], 15);
-L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw', {
-		maxZoom: 18,
-		attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors, ' +
-			'Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
-		id: 'mapbox/streets-v11',
-		tileSize: 512,
-		zoomOffset: -1
-	}).addTo(map);
+    pointset = dataGeo;
+    L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
+        maxZoom: 18,
+        attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors'
+    }).addTo(map);
 
     pointset = dataGeo;
   
