--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </footer>
     <script>
     window.onload = function() {
-        example1();
+        exemple1();
      
     }
     </script>
