--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
         <section id="main-content">
 <pre><code>902 adresses extraites de Noe
     récupération des coordonnées des adresses via https://adresse.data.gouv.fr/csv
-    récupération des temps de trajet et distance (à pied, en voiture, en transports en commun) à la 20ème Chaise par Google Map API
+    récupération des temps de trajet et distance (à pied, en voiture, en transports en commun)
+    à la 20ème Chaise par Google Map API
     utilisation des ressources Open Street Map
     détermination des enveloppes convexes(-concaves) par algorithme externe
    
