--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
  function exemple1() {
     var map = L.map('map').setView([48.864891,2.389828], 15);
     pointset = dataGeo;
+    pointset2 = dataGeo2;
+    pointset3 = dataGeo3;
+    pointset4 = dataGeo4;
+    pointset5 = dataGeo5;
     L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
         maxZoom: 18,
         attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors'
