--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link href='https://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
+    
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -24,7 +22,7 @@
 <body>
     <header>
       <h3>Adhérents de la 20ème Chaise - Saisons 2018-19 et 2019-2020 </h3>
-        <a href="https://www.la20emechaise.org/" class="button"><small>Site internet du centre social</small></a>
+        <a href="https://www.la20emechaise.org/" class="button">Site internet du centre social</a>
       </div>
     </header>
 
@@ -92,6 +90,7 @@
     </div>
     <footer>
       <div class="inner">
+       &copy; janvier 2021 <a href="mailto:francois.rigot.fr@gmail.com" target="_blank">François R</a>
       </div>
     </footer>
     <script>
