--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
     <div id="content-wrapper">
       <div class="inner clearfix">
         <section id="main-content">
-<pre>902 adresses extraites de Noe
+<p>902 adresses extraites de Noe
     récupération des coordonnées des adresses via https://adresse.data.gouv.fr/csv
     récupération des temps de trajet et distance (à pied, en voiture, en transports en commun)
     à la 20ème Chaise par Google Map API
     utilisation des ressources Open Street Map
     détermination des enveloppes convexes(-concaves) par algorithme externe
    
-</pre>
+</p>
 <!-- Exemple 1 -->
 <h3><a name="ex1" class="anchor" ><span class="octicon octicon-link"></span>Temps de trajet à pied</a></h3>
 
