--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
     <div id="content-wrapper">
       <div class="inner clearfix">
         <section id="main-content">
-<p>902 adresses extraites de Noe
-    récupération des coordonnées des adresses via https://adresse.data.gouv.fr/csv
-    récupération des temps de trajet et distance (à pied, en voiture, en transports en commun)
-    à la 20ème Chaise par Google Map API
-    utilisation des ressources Open Street Map
+<p>902 adresses extraites de Noe <br>
+    récupération des coordonnées des adresses via https://adresse.data.gouv.fr/csv <br>
+    récupération des temps de trajet et distance (à pied, en voiture, en transports en commun) <br>
+    à la 20ème Chaise par Google Map API <br>
+    utilisation des ressources Open Street Map <br>
     détermination des enveloppes convexes(-concaves) par algorithme externe
    
 </p>
