--- a/index.html
+++ b/index.html
@@ -29,19 +29,19 @@
     <div id="content-wrapper">
       <div class="inner clearfix">
         <section id="main-content">
-<p>902 adresses extraites de Noe <br>
-    récupération des coordonnées des adresses via https://adresse.data.gouv.fr/csv <br>
-    récupération des temps de trajet et distance (à pied, en voiture, en transports en commun) <br>
+<p> - 902 adresses extraites de Noe <br>
+    - récupération des coordonnées des adresses via https://adresse.data.gouv.fr/csv <br>
+    - récupération des temps de trajet et distance (à pied, en voiture, en transports en commun) <br>
     à la 20ème Chaise par Google Map API <br>
-    utilisation des ressources Open Street Map <br>
-    détermination des enveloppes convexes(-concaves) par algorithme externe
+    - utilisation des ressources Open Street Map <br>
+    - détermination des enveloppes convexes(-concaves) par algorithme externe
    
 </p>
 <!-- Exemple 1 -->
 <h3><a name="ex1" class="anchor" ><span class="octicon octicon-link"></span>Temps de trajet à pied</a></h3>
 
 <p>
-  <div id="map" style="width: 900px; height: 600px"></div>
+  <div id="map" style="width: 840px; height: 560px"></div>
   <script>
  function exemple1() {
     var map = L.map('map').setView([48.864891,2.389828], 15);
@@ -99,6 +99,15 @@
      
     }
     </script>
+<p> - 902 adresses extraites de Noe <br>
+    - récupération des coordonnées des adresses via https://adresse.data.gouv.fr/csv <br>
+    - récupération des temps de trajet et distance (à pied, en voiture, en transports en commun) <br>
+    à la 20ème Chaise par Google Map API <br>
+    - utilisation des ressources Open Street Map <br>
+    - détermination des enveloppes convexes(-concaves) par algorithme externe
+   
+</p>
+
   </body>
 </html>
 
