--- a/index.html
+++ b/index.html
@@ -72,19 +72,19 @@
 
     var pts = hull(pointset, 1, ['.lng', '.lat']);
     var poly1 = L.polygon(pts, {weight: 2, color : 'red', fillopacity : 0.9}).addTo(map);
-    var surf1 = L.GeometryUtil.geodesicArea(poly1.getLatLngs())
+    var surf1 = L.GeometryUtil.geodesicArea(poly1.getLatLngs());
     var pts2 = hull(pointset2, 0.1, ['.lng', '.lat']);
     var poly2 = L.polygon(pts2, {weight: 2, color : 'blue', fillopacity : 0.9}).addTo(map);
-    var surf2 = L.GeometryUtil.geodesicArea(poly2.getLatLngs())
+    var surf2 = L.GeometryUtil.geodesicArea(poly2.getLatLngs());
     var pts3 = hull(pointset3, 0.1, ['.lng', '.lat']);
     var poly3 = L.polygon(pts3, {weight: 2, color : 'green', fillopacity : 0.9}).addTo(map);
-    var surf3 = L.GeometryUtil.geodesicArea(poly3.getLatLngs())
+    var surf3 = L.GeometryUtil.geodesicArea(poly3.getLatLngs());
     var pts4 = hull(pointset4, 0.1, ['.lng', '.lat']);
     var poly4 = L.polygon(pts4, {weight: 2, color : 'yellow', fillopacity : 0.9}).addTo(map);
-    var surf4 = L.GeometryUtil.geodesicArea(poly4.getLatLngs())
+    var surf4 = L.GeometryUtil.geodesicArea(poly4.getLatLngs());
     var pts5 = hull(pointset5, 0.1, ['.lng', '.lat']);
     var poly5 = L.polygon(pts5, {weight: 2, color : 'brown', fillopacity : 0.9}).addTo(map);
-    var surf5 = L.GeometryUtil.geodesicArea(poly5.getLatLngs())
+    var surf5 = L.GeometryUtil.geodesicArea(poly5.getLatLngs());
    
   }
   </script>
