--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
      
     }
     </script>
-<p> - 902 adresses extraites de Noe <br>
+<p> - <script> document.write(surf1) </script> <br>
     - récupération des coordonnées des adresses via https://adresse.data.gouv.fr/csv <br>
     - récupération des temps de trajet et distance (à pied, en voiture, en transports en commun) <br>
     à la 20ème Chaise par Google Map API <br>
