--- a/index.html
+++ b/index.html
@@ -102,9 +102,8 @@
      
     }
     </script>
-< p id = 'surface' > </p>
-<p> - la surface jaune représente <var> surf1 </var> <br>
-    - récupération des coordonnées des adresses via https://adresse.data.gouv.fr/csv <br>
+<p id='surface' > </p>
+<p> - récupération des coordonnées des adresses via https://adresse.data.gouv.fr/csv <br>
     - récupération des temps de trajet et distance (à pied, en voiture, en transports en commun) <br>
     à la 20ème Chaise par Google Map API <br>
     - utilisation des ressources Open Street Map <br>
