--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 	 
     function surf1() {
    
-    document.getElementById('surface').innerHTML = L.GeometryUtil.geodesicArea(poly1.getLatLngs());
+    alert(L.GeometryUtil.geodesicArea(poly1.getLatLngs()));
     }
    surf1();
     
