--- a/index.html
+++ b/index.html
@@ -80,8 +80,10 @@
     var poly4 = L.polygon(pts4, {weight: 2, color : 'yellow', fillopacity : 0.9}).addTo(map);
     var pts5 = hull(pointset5, 0.1, ['.lng', '.lat']);
     var poly5 = L.polygon(pts5, {weight: 2, color : 'brown', fillopacity : 0.9}).addTo(map);
-    document.getElementById('surf1').innerHTML =  L.GeometryUtil.geodesicArea(poly1.getLatLngs());
-   
+    function affiche_surf() {
+    var surf1 = L.GeometryUtil.geodesicArea(poly1.getLatLngs())
+     document.getElementById('surf1').innerHTML = surf1;
+    };
     
    surf1();
     
