--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
      
     }
     </script>
-<p id='surf1' > </p>
+<p id='surf' > </p>
 <p> - récupération des coordonnées des adresses via https://adresse.data.gouv.fr/csv <br>
     - récupération des temps de trajet et distance (à pied, en voiture, en transports en commun) <br>
     à la 20ème Chaise par Google Map API <br>
