--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     var pts = hull(pointset, 1, ['.lng', '.lat']);
     var poly1 = L.polygon(pts, {weight: 2, color : 'red', fillopacity : 0.9}).addTo(map);
     var surface1 = L.GeometryUtil.geodesicArea(poly1.getLatLngs()[0]);
-    document.getElementById("surf").innerHTML = 'la surface rouge a une superficie de ' + (Math.round(surface1)).ToLocalString() + '.';
+    document.getElementById("surf").innerHTML = 'la surface rouge a une superficie de ' + (Math.round(surface1)).ToLocaleString() + '.';
 
     var pts2 = hull(pointset2, 0.1, ['.lng', '.lat']);
     var poly2 = L.polygon(pts2, {weight: 2, color : 'blue', fillopacity : 0.9}).addTo(map);
