--- a/index.html
+++ b/index.html
@@ -25,11 +25,13 @@
         <a href="https://www.la20emechaise.org/" class="button">Site internet du centre social</a>
       </div>
     </header>
-   
-function Separateur_Milliers(value) {
-    return value.toString().replace(/\B(?=(\d{3})+(?!\d))/g, " ");
-};
 
+	<script>
+	function Separateur_Milliers(value) {
+    	return value.toString().replace(/\B(?=(\d{3})+(?!\d))/g, " ");
+	};
+	</script>
+	
     <div id="content-wrapper">
       <div class="inner clearfix">
         <section id="main-content">
@@ -39,7 +41,7 @@ function Separateur_Milliers(value) {
     à la 20ème Chaise par Google Map API <br>
     - utilisation des ressources Open Street Map <br>
     - détermination des enveloppes convexes(-concaves) par algorithme externe
-   
+ 
 </p>
 <!-- Exemple 1 -->
 <h3><a name="ex1" class="anchor" ><span class="octicon octicon-link"></span>Temps de trajet à pied</a></h3>
