--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     pointset3 = dataGeo3;
     pointset4 = dataGeo4;
     pointset5 = dataGeo5;
-    L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
+    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
         maxZoom: 18,
         attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors'
     }).addTo(map);
