--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     var poly1 = L.polygon(pts, {weight: 2, color : 'red', fillopacity : 0.9}).addTo(map);
     var surface1 = L.GeometryUtil.geodesicArea(poly1.getLatLngs()[0]);
     document.getElementById("surf").innerHTML = 'La surface rouge a une superficie de ' + Separateur_Milliers(Math.round(surface1)) + ' mètres carrés ' +
-	    ' et contient ' + pointset1.length + ' adresses.';
+	    ' et contient ' + pointset.length + ' adresses.';
 
     var pts2 = hull(pointset2, 0.1, ['.lng', '.lat']);
     var poly2 = L.polygon(pts2, {weight: 2, color : 'blue', fillopacity : 0.9}).addTo(map);
