--- a/index.html
+++ b/index.html
@@ -82,9 +82,7 @@
     pointset5.forEach(function(latlng) {
         L.circleMarker(latlng, {radius: 2, color : 'orange'}).addTo(map);
     });
-    var pts = hull(pointset, 1, ['.lng', '.lat']);
-    var poly1 = L.polygon(pts, {weight: 2, color : 'red', fillopacity : 0.9}).addTo(map);
-    var surface1 = L.GeometryUtil.geodesicArea(poly1.getLatLngs()[0]);
+   
 
     var pts2 = hull(pointset2, 0.05, ['.lng', '.lat']);
     var poly2 = L.polygon(pts2, {weight: 2, color : 'blue', fillopacity : 0.9}).addTo(map);
@@ -101,6 +99,10 @@
     var pts5 = hull(pointset5, 0.01, ['.lng', '.lat']);
     var poly5 = L.polygon(pts5, {weight: 2, color : 'orange', fillopacity : 0.9}).addTo(map);
     var surface5 = L.GeometryUtil.geodesicArea(poly5.getLatLngs()[0]);
+
+    var pts = hull(pointset, 1, ['.lng', '.lat']);
+    var poly1 = L.polygon(pts, pts2, {weight: 2, color : 'red', fillopacity : 0.9}).addTo(map);
+    var surface1 = L.GeometryUtil.geodesicArea(poly1.getLatLngs()[0]);
 	 
     document.getElementById("surf").innerHTML = 'La surface orange a une superficie de ' + Separateur_Milliers(Math.round(surface5)) +' mètres carrés' +
 	    ' et contient ' + pointset5.length + ' adresses.';
