--- a/index.html
+++ b/index.html
@@ -91,18 +91,21 @@
     var pts3 = hull(pointset3, 0.005, ['.lng', '.lat']);
     var poly3 = L.polygon(pts3, {weight: 2, color : 'green', fillopacity : 0.9}).addTo(map);
     var surface3 = L.GeometryUtil.geodesicArea(poly3.getLatLngs()[0]);
-	 
-    var pts4 = hull(pointset4, 0.01, ['.lng', '.lat']);
-    var poly4 = L.polygon(pts4, {weight: 2, color : 'yellow', fillopacity : 0.9}).addTo(map);
-    var surface4 = L.GeometryUtil.geodesicArea(poly4.getLatLngs()[0]);
-	 
+	 	 
     var pts5 = hull(pointset5, 0.01, ['.lng', '.lat']);
     var poly5 = L.polygon(pts5, {weight: 2, color : 'orange', fillopacity : 0.9}).addTo(map);
     var surface5 = L.GeometryUtil.geodesicArea(poly5.getLatLngs()[0]);
 
+    var pts4 = hull(pointset4, 0.01, ['.lng', '.lat']);
+    var poly4 = L.polygon([pts4,pts5], {weight: 2, color : 'yellow', fillopacity : 0.9}).addTo(map);
+    var surface4 = L.GeometryUtil.geodesicArea(poly4.getLatLngs()[0]);
+
+
     var pts = hull(pointset, 1, ['.lng', '.lat']);
     var poly1 = L.polygon([pts, pts2], {weight: 2, color : 'red', fillopacity : 0.9}).addTo(map);
     var surface1 = L.GeometryUtil.geodesicArea(poly1.getLatLngs()[0]);
+
+
 	 
     document.getElementById("surf").innerHTML = 'La surface orange a une superficie de ' + Separateur_Milliers(Math.round(surface5)) +' mètres carrés' +
 	    ' et contient ' + pointset5.length + ' adresses.';
