--- a/index.html
+++ b/index.html
@@ -58,6 +58,12 @@
     };
     return properties;
     });
+ let dataDureePied6 = data.map( adresse => {
+    let properties = {
+   "valeur": adresse.duree_pied
+    };
+    return properties;
+    });
     pointset = dataGeo6;
     pointset2 = dataGeo2;
     pointset3 = dataGeo3;
