--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@
     };
     return properties;
     });
+    var Pied6_Max = Math.max([dataDureePied6]);
+    var Pied6_Min = Math.min([dataDureePied6]);
+    console.log(Pied6_Max);
+    console.log(Pied6_Min);
     pointset = dataGeo6;
     pointset2 = dataGeo2;
     pointset3 = dataGeo3;
