--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
     };
     return properties;
     });
-    var Pied6_Max = Math.max(...dataDureePied6[0]);
-    var Pied6_Min = Math.min(...dataDureePied6[0]);
+    var Pied6_Max = Math.max(dataDureePied6[0]);
+    var Pied6_Min = Math.min(dataDureePied6[0]);
     console.log(Pied6_Max);
     console.log(Pied6_Min);
     pointset = dataGeo6;
