--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
     };
     return properties;
     });
-    var Res_Max = Math.max.apply(Math,data.map(function(o){return o.duree_pied;}))
-    var Res_Min = Math.min.apply(Math,data.map(function(o){return o.duree_pied;}))
+    var Res_Max = Math.max.apply(Math,data.map(function(o){return o.duree_pied;}));
+    var Res_Min = Math.min.apply(Math,data.map(function(o){return o.duree_pied;}));
     console.log(Res_Max);
     console.log(Res_Min);
     pointset = dataGeo6;
